--- a/views/animals/index.ejs
+++ b/views/animals/index.ejs
@@ -5,13 +5,13 @@
 </head>
 <body>
     <%- include("../partials/header.ejs") %>
-    <a href="/animals/new">Add an Animal</a>
+    <a href="/animals/new"><button>Add an Animal</button></a>
     <div>
         <% for (animal of animals) { %>
             <article>
                 <a href="/animals/<%= animal.id %> ">
                     <h2>
-                        <%= animal.name %> - <%= animal.extinct? "Extinct" : "Not Extinct" %>  
+                        <%= animal.species %> - <%= animal.extinct? "Extinct" : "Not Extinct" %>  
                     </h2>
                 </a>
             </article>
