--- a/views/animals/show.ejs
+++ b/views/animals/show.ejs
@@ -5,9 +5,9 @@
     <%- include("../partials/head.ejs") %>
     <div>
         <h1><%= animal.species %> </h1>
-        <img src="<%= animal.img %> ">
         <a href="/animals/<%= animal.id %>/edit "><button>Edit</button></a>
-        
+        <a href="/animals/<%= animal.id %>/delete "><button>Delete</button></a>
+        <img src="<%= animal.img %> ">
         <a href="/animals"><button>Back to Animals</button></a> 
     </div>
 </body>
