set up auth, add logout to fruits/index.ejs

--- a/views/animals/index.ejs
+++ b/views/animals/index.ejs
@@ -16,6 +16,7 @@
                 </a>
             </article>
         <% } %> 
-    </div> 
+    </div>
+    <a href="/user/logout"><button>LOGOUT</button></a> 
 </body>
 </html>
