why doesn't my async fn work?

--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -9,12 +9,15 @@
                     <fieldset>
                         <legend>User Login</legend>
                         <label for="login-username">
-                            USERNAME: <input type="text" name="username" id="login-username" required />
+                            USERNAME: <input type="text" name="username" id="login-username" />
                         </label>
                         <label for="login-password">
-                            PASSWORD: <input type="text" name="password" id="login-password" required />
+                            PASSWORD: <input type="password" name="password" id="login-password" />
                         </label>
                         <input type="submit" value="LOGIN">
+                        <!-- how to make this work without filling in form? -->
+                        <a href="/user/signup"><button>SIGNUP</button></a>
+                        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><button>CONTINUE AS GUEST</button></a>
                     </fieldset>
                 </form>
             </div>
