--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -12,7 +12,7 @@
                             USERNAME: <input type="text" name="username"    id="signup-username" required />
                         </label>
                         <label for="signup-password">
-                            PASSWORD: <input type="text" name="password"    id="signup-password" required />
+                            PASSWORD: <input type="password" name="password"    id="signup-password" required />
                         </label>
                         <input type="submit" value="Create Account">
                     </fieldset>
