--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 <%- include("./partials/head.ejs") %>
     <body>
-        <%- include("./partials.header.ejs") %>
+        <%- include("./partials/header.ejs") %>
         <main>
             <div>
                 <a href="/user/signup"><button>SIGNUP</button></a>
